assets/CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+JP&display=swap');

:root {
    --heading-font-family: 'noto sans', sans-serif;
    --text-font-family: JP, san-serif;
    --bg-color: #444444;
}

* {
    margin: 0;
    padding: 0;
    border: none;
}


nav {
    box-shadow: 0 5px 5px 0 rgba(41, 7, 236, 0.2);
}

nav a:hover {
    font-size: 110%;
    border-bottom: dotted red;
}

body {
    padding-top: 70px;
    font-family: var(--text-font-family);
    color: var(--bg-color)
}

h1,
h2 {
    font-family: var(--heading-font-family);
}

a {
    text-decoration: none;
    color: #fdf5e6;
    text-shadow: 1px 1px #444;
    font-family: var(--heading-font-family);
}

.center-text {
    text-align: center;
}

/* logo size */

.logo-img {
    width: 50px;
}

/* footer */

footer {
    background-color: #444444;
    height: 50px;
    display: flex;
    justify-content: space-between;
    height: 50px;
    margin: 10px 0 -10px;
    padding-bottom: 0;
    text-decoration: none;
    color: #fdf5e6;
    list-style: none;
}

footer .logo-img {
    height: 50px;
    width: 50px;
    margin: 0;
    padding: 0;
}

footer span {
    padding: 10px 0;
}

.sns {
    font-size: 200%;
    list-style: none;
    text-decoration: none;
    letter-spacing: 10px;
    display: inline-flex;
}

/* Hero image */

.hero-image {
    height: 300px;
    background-image: url(../images/hero-image.jpg);
    margin-bottom: 10px;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-text {
    position: relative;
    left: 3vw;
    width: 300px;
    height: auto;
    padding: 10px;
    margin-top: 30px;
    border-radius: 10%;
    background-color: rgb(253, 245, 230, 0.5);
    color: #1d1b14;
    text-align: center;
    text-shadow: 1px 1px rgb(41, 7, 236);
}

input,
select {
    width: 200px;
    height: 30px;
}

textarea {
    width: 200px;
}

/* Category section */


/* category link text code partly copied from techacademy.jp */

.cat-link {
    position: relative;
    background: linear-gradient(223deg, rgba(228, 189, 44, 1) 0%, rgba(142, 39, 11, 1) 100%);
}

.cat-link p {
    position: absolute;
    top: 25%;
    left: 10%;
    font-size: 40px;
    color: #fafafa;
    letter-spacing: -1px;
}

.img-200 {
    height: 200px;
    width: 25vw;
}

.img-100 {
    height: 100px;
    width: 25vw;
}

.cat-link img {
    opacity: 0.1;
}

.cat-pic {
    z-index: -1;
}

.cat-icon {
    font-size: 2rem;
    border: 1px solid var(--bg-color);
    border-radius: 50%;
}

/*Feedback page */

.feedback_img {
    background-image: url(../images/feedback_img.jpg);
    height: 300px;
    background-repeat: no-repeat;
    background-size: cover;
}

.vertical-top {
    display: inline;
    vertical-align: top;
    width: 150px;
}

label {
    width: 120px;
}

/* Feedback form */

input,
textarea,
select {
    border: 2px solid #4a4a4a;
    border-radius: 2%;
}


.fb-grid-container {
    display: grid;
    grid-template-columns: 2fr 2fr 1fr 2fr 2fr;
    grid-template-rows: 1fr 1fr 3fr 1fr;
}



/* aligning form elements with grid */

.form-name {
    grid-row: 1/2;
    grid-column: 2/4;
}

.form-email {
    grid-row: 1/2;
    grid-column: 4/6;
    margin-right: 10px;
}

.form-concern {
    grid-row: 2/3;
    grid-column: 2/4;
}

.form-comment {
    grid-row: 3/4;
    grid-column: 2/5;
}

.form-send {
    grid-row: 4/5;
    grid-column: 3/4;
    align-self: center;
}

.send-btn {
    width: 100px;
    font-size: 20px;
    font-weight: bold;
    font-family: sans-serif;
    text-decoration: none;
    /*display: flex;*/
    text-align: center;
    padding: 0 0 5px;
    margin-top: 0;
    color: #fff;
    background-color: #49a9d4;
    border-radius: 5px;
    box-shadow: 2px 2px 2px #555;
    text-shadow: 2px 2px #555;

}

@media only screen and (max-width: 600px) {
    .fb-grid-container {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
        padding-left: 15px;
    }

    /* aligning form elements with grid */
    #form-name {
        grid-row: 1/2;
        grid-column: 1/2;
    }

    #form-email {
        grid-row: 2/3;
        grid-column: 1/2;
    }

    #form-concern {
        grid-row: 3/4;
        grid-column: 1/2;
    }

    #form-comment {
        grid-row: 4/5;
        grid-column: 1/2;
    }

    #form-send {
        grid-row: 5/6;
        grid-column: 1/2;
        justify-self: center;
    }
  
}

@media only screen and (max-width: 770px) {
    /* category-images */

    .img-200, .img-100 {
        width: 50vw;
    }
}

@media only screen and (max-width: 900px) {
    .cat-link p {
        font-size: 20px;
    }
}

@media only screen and (min-height: 1024px) {

}

